--- a/home/templates/basic.html
+++ b/home/templates/basic.html
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% block title %}  {% endblock %}</title>
-  <style>
-    {% block css %} {% endblock %}
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
 
-</style>
+  <title> {% block title %}  {% endblock %} </title>
+
+  <style> {% block css %} {% endblock %} </style>
+
   <meta content="" name="description">
   <meta content="" name="keywords">
-
-  <!-- Favicons -->
    
- 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <!-- =======================================================
-  * Template Name: SoftLand
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -42,7 +31,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1><a href="index.html">Sameep</a></h1>
+        <h1><a href="">Sameep</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -54,7 +43,7 @@
             <div class="wrapper">
             <div class="search-input">
               <a href="" target="_blank" hidden></a>
-              <input type="text1" style="border-radius: 74px;" placeholder="Type to search...">
+              <input type="text" style="border-radius: 74px;" placeholder="Type to search...">
               <div class="autocom-box">
                 <!-- here list are inserted from javascript -->
               </div>
@@ -64,8 +53,8 @@
           
 
         </li>
-          <li><a class="active " href="index.html">Home</a></li>
-          <li><a href="product.html">Products</a></li>
+          <li><a class="active " href="">Home</a></li>
+          <li><a href="productview">Products</a></li>
           <li class="dropdown"><a href="#"><span>Men </span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -102,10 +91,10 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact">Contact Us</a></li>
            
         <li>     <div onClick="parent.location='#'" class="icon1"><i id="fas2" class="fas fa-user"></i></div></li>
-        <li>     <div onClick="parent.location='#'" class="icon3"><i   > <img src="/assets/img/cart.png" alt=""> </i></div>
+        <li>     <div onClick="parent.location='#'" class="icon3"><i   > <img src="static/img/cart.png" alt=""> </i></div>
       </li>
         </ul>
             </nav><!-- .navbar -->
@@ -120,8 +109,11 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa fa-arrow-up"></i></a>
 
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="static/js/main.js"></script>
 
 </body>
 
