--- a/home/templates/product1.html
+++ b/home/templates/product1.html
@@ -28,8 +28,7 @@
 
   
   <!-- Template Main CSS File -->
-  <link href="assets/css/product1.css
-  " rel="stylesheet">
+  <link href="static/css/product1.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: SoftLand
@@ -47,7 +46,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <h1><a href="index.html">SoftLand</a></h1>
+        <h1><a href="index">SoftLand</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
