--- a/home/templates/productView.html
+++ b/home/templates/productView.html
@@ -1,26 +1,311 @@
-<!doctype html>
-<html lang="ar">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Product Details</title>
-  </head>
-  <body>
-    <a class="btn btn-outline-primary" href="/" role="button">Back</a>
-    <!-- Optional JavaScript; choose one of the two! -->
+  <title>SoftLand Bootstrap Template - Features</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-    -->
-  </body>
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+
+<!-- for slider   -->
+ 
+
+
+  <!-- Vendor CSS Files -->
+  <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.3/dist/css/splide.min.css'>
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/product.css
+  " rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: SoftLand
+  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+  * Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex align-items-center">
+    <div class="container d-flex justify-content-between align-items-center">
+
+      <div class="logo">
+        <h1><a href="index">SoftLand</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+
+          <li>
+            <div class="wrapper">
+              <div class="search-input">
+                <a href="" target="_blank" hidden></a>
+                <input type="text1" style="border-radius: 74px;" placeholder="Type to search...">
+                <div class="autocom-box">
+                  <!-- here list are inserted from javascript -->
+                </div>
+                <div class="icon"><i class="fas fa-search"></i></div>
+              </div>
+            </div>
+
+
+          </li>
+          <li><a class="active " href="./index.html">Home</a></li>
+          <li><a href="product.html">Product</a></li>
+          <li class="dropdown"><a href="#"><span>Men </span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li>
+
+
+          <li class="dropdown"><a href="#"><span>Women</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact Us</a></li>
+
+          <li>
+            <div onClick="parent.location='#'" class="icon1"><i id="fas2" class="fas fa-user"></i></div>
+          </li>
+          <li>
+            <div onClick="parent.location='#'" class="icon3"><i> <img src="/assets/img/cart.png" alt=""> </i></div>
+          </li>
+        </ul>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <main id="main">
+
+ <!-- slider   -->
+
+ <div id="myCarousel" class="carousel slide">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for Slides -->
+  <div class="carousel-inner">
+      <div class="item active">
+          <!-- Set the first background image using inline CSS below. -->
+          <div class="fill" style="background-image:url('http://www.marchettidesign.net/demo/optimized-bootstrap/code.jpg');"></div>
+          <div class="carousel-caption">
+               <h2 class="animated fadeInLeft">Caption Animation</h2>
+               <p class="animated fadeInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+               <p class="animated fadeInUp"><a href="#" class="btn btn-transparent btn-rounded btn-large">Learn More</a></p>
+          </div>
+      </div>
+      <div class="item">
+          <!-- Set the second background image using inline CSS below. -->
+          <div class="fill" style="background-image:url('http://www.marchettidesign.net/demo/optimized-bootstrap/conference.jpg');"></div>
+          <div class="carousel-caption">
+               <h2 class="animated fadeInDown">Caption Animation</h2>
+               <p class="animated fadeInUp">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+               <p class="animated fadeInUp"><a href="#" class="btn btn-transparent btn-rounded btn-large">Learn More</a></p>
+          </div>
+      </div>
+      <div class="item">
+          <!-- Set the third background image using inline CSS below. -->
+          <div class="fill" style="background-image:url('http://www.marchettidesign.net/demo/optimized-bootstrap/campus.jpg');"></div>
+          <div class="carousel-caption">
+               <h2 class="animated fadeInRight">Caption Animation</h2>
+               <p class="animated fadeInRight">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+               <p class="animated fadeInRight"><a href="#" class="btn btn-transparent btn-rounded btn-large">Learn More</a></p>
+          </div>
+      </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="icon-prev"></span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="icon-next"></span>
+  </a>
+
+</div>
+<!-- partial -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+
+   
+
+
+ 
+    <div class="listing-section">
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-1"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Orange</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious oranges!</p>
+          <label for="item-1-quantity">Quantity:</label>
+          <input type="text" name="item-1-quantity" id="item-1-quantity" value="1">  
+          <button type="button" name="item-1-button" id="item-1-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-2"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Apple</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious apples!</p>
+          <label for="item-2-quantity">Quantity:</label>
+          <input type="text" name="item-2-quantity" id="item-2-quantity" value="1">  
+          <button type="button" name="item-2-button" id="item-2-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-3"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Passionfruit</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious passionfruit!</p>
+          <label for="item-3-quantity">Quantity:</label>
+          <input type="text" name="item-3-quantity" id="item-3-quantity" value="1">  
+          <button type="button" name="item-3-button" id="item-3-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-4"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Pineapple</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious pineapples!</p>
+          <label for="item-4-quantity">Quantity:</label>
+          <input type="text" name="item-4-quantity" id="item-4-quantity" value="1">  
+          <button type="button" name="item-4-button" id="item-4-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-5"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Mango</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious mangos!</p>
+          <label for="item-5-quantity">Quantity:</label>
+          <input type="text" name="item-5-quantity" id="item-5-quantity" value="1">   
+          <button type="button" name="item-5-button" id="item-5-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-6"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Coconut</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious coconuts!</p>
+          <label for="item-6-quantity">Quantity:</label>
+          <input type="text" name="item-6-quantity" id="item-6-quantity" value="1">  
+          <button type="button" name="item-6-button" id="item-6-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-7"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Banana</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious bananas!</p>
+          <label for="item-7-quantity">Quantity:</label>
+          <input type="text" name="item-7-quantity" id="item-7-quantity" value="1">  
+          <button type="button" name="item-7-button" id="item-7-button">Add to Cart</button>-->
+        </div>
+      </div>
+      <div class="product">
+        <div class="image-box">
+          <div class="images" id="image-8"></div>
+        </div>
+        <div class="text-box">
+          <h2 class="item">Plum</h2>
+          <h3 class="price">$4.99</h3>
+          <!-- <p class="description">A bag of delicious plums!</p>
+          <label for="item-8-quantity">Quantity:</label>
+          <input type="text" name="item-8-quantity" id="item-8-quantity" value="1"> -->
+
+        </div>
+      </div>
+
+    </div> 
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
+
+
+
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
